Linked object made by Make Links isn't showed in the scene you linked to #62064

Closed
opened 2019-02-28 22:45:35 +01:00 by Satoshi Yamasaki · 4 comments

System Information
Operating system: Windows 10 Pro 1809
Graphics card: GTX 1060

Blender Version
Broken: 2.80.0-git.d7d180bd3d8d-windows64, 2.80.0-git.893fa598319e-windows64

Exact steps for others to reproduce the error

  1. Start up blender, and add new scene (with empty).
  2. Return first scene.
  3. Select Cube if not selected.
  4. Use "Make Links" ([Ctrl]+- ) and select "Objects To Scene" -> "Scene.001".
  5. Go to Scene.001. 3D Viewport doesn't show the linked object.
  6. You can Delete the object once and Undo it to show the object correctly. Or you can also show it with toggle renderable switch in Outliner.

Thanks,

**System Information** Operating system: Windows 10 Pro 1809 Graphics card: GTX 1060 **Blender Version** Broken: 2.80.0-git.d7d180bd3d8d-windows64, 2.80.0-git.893fa598319e-windows64 **Exact steps for others to reproduce the error** 1) Start up blender, and add new scene (with empty). 2) Return first scene. 3) Select Cube if not selected. 4) Use "Make Links" ([Ctrl]+- [x]) and select "Objects To Scene" -> "Scene.001". 5) Go to Scene.001. 3D Viewport doesn't show the linked object. 6) You can Delete the object once and Undo it to show the object correctly. Or you can also show it with toggle renderable switch in Outliner. Thanks,
Author
Member

Added subscriber: @SatoshiYamasaki

Added subscriber: @SatoshiYamasaki
Bastien Montagne was assigned by Sebastian Parborg 2019-03-02 14:33:27 +01:00

This issue was referenced by 419ee7bdc6

This issue was referenced by 419ee7bdc6f81d5fae1df136d72c3d4d23a6574a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

Thank you Sebastian and Bastien !

Thank you Sebastian and Bastien !
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62064
No description provided.