Fix T62064: Linked object made by Make Links isn't showed in the scene you linked to.

Usual missing DEG relations rebuild tagging...